@@ -22,6 +22,9 @@ Upgrading
       BYTES type containing empty value. Scrub should be run on the existing
       SSTables containing a descending clustering column of BYTES type to correct
       their ordering. See CASSANDRA-12127 for details.
+      
+    - Ec2MultiRegionSnitch will no longer automatically set broadcast_rpc_address
+      to the public instance IP if this property is defined on cassandra.yaml.
 
 2.1.15
 ======
